@@ -6,12 +6,12 @@ LFLAGSLOCAL = -L../lib -lsoap -lexm -lgridg -lpthread -lm
 ####### Files
 
 HEADERS =       share.h
-SOURCES =	share.c bdrylayer.c normalshock.c shearlayer.c obliqueshock.c inlet.c inletgeom.c injector.c compressionfan.c cathode.c ringleb.c tauvt.c calc.c tecgrid2D.c tecgrid3D.c mpitest.c average.c equilairplasma.c soap.c thermionic.c chemkin2cfdwarp.c
-OBJECTS =	share.o bdrylayer.o normalshock.o shearlayer.o obliqueshock.o inlet.o inletgeom.o injector.o compressionfan.o cathode.o ringleb.o tauvt.o calc.o tecgrid2D.o tecgrid3D.o mpitest.o average.o equilairplasma.o soap.o thermionic.o chemkin2cfdwarp.o
-TARGETS  =	bdrylayer normalshock shearlayer obliqueshock inlet inletgeom injector compressionfan cathode ringleb tauvt openmptest calc tecgrid2D tecgrid3D mpitest average equilairplasma soap thermionic chemkin2cfdwarp
+SOURCES =	share.c bdrylayer.c normalshock.c shearlayer.c obliqueshock.c inlet.c inletgeom.c injector.c compressionfan.c cathode.c ringleb.c tauvt.c calc.c tecgrid2D.c tecgrid3D.c mpitest.c average.c equilairplasma.c soap.c thermionic.c chemkin2cfdwarp.c atten.c
+OBJECTS =	share.o bdrylayer.o normalshock.o shearlayer.o obliqueshock.o inlet.o inletgeom.o injector.o compressionfan.o cathode.o ringleb.o tauvt.o calc.o tecgrid2D.o tecgrid3D.o mpitest.o average.o equilairplasma.o soap.o thermionic.o chemkin2cfdwarp.o atten.o
+TARGETS  =	bdrylayer normalshock shearlayer obliqueshock inlet inletgeom injector compressionfan cathode ringleb tauvt openmptest calc tecgrid2D tecgrid3D mpitest average equilairplasma soap thermionic chemkin2cfdwarp atten
 ####### Build rules
 
-all: bdrylayer normalshock shearlayer obliqueshock inlet injector inletgeom compressionfan cathode ringleb tauvt openmptest calc tecgrid2D tecgrid3D mpitest average equilairplasma soap thermionic chemkin2cfdwarp
+all: bdrylayer normalshock shearlayer obliqueshock inlet injector inletgeom compressionfan cathode ringleb tauvt openmptest calc tecgrid2D tecgrid3D mpitest average equilairplasma soap thermionic chemkin2cfdwarp atten
 
 tecgrid2D: tecgrid2D.o 
 	$(L) tecgrid2D.o -o tecgrid2D $(LFLAGS) $(LFLAGSLOCAL)
@@ -76,6 +76,9 @@ thermionic: thermionic.o
 	
 chemkin2cfdwarp: chemkin2cfdwarp.o
 	$(L) chemkin2cfdwarp.o -o chemkin2cfdwarp $(LFLAGS) $(LFLAGSLOCAL)
+
+atten: atten.o
+	$(L) atten.o -o atten $(LFLAGS) $(LFLAGSLOCAL)
 	
 cleanall: clean
 	(rm -f centveldist.plt eqchemfinal.plt nozzlecont.plt rocketsum.out subnozzlecont.plt ringleb.init ringleb.grid ringleb.dat)
